# pactly

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 78791b1574ca_make_chunk_embedding_nullable.py  7dace9c2408f_initial_schema.py
app/: config.py  database.py  exceptions.py  main.py  middleware.py
app/events/: bus.py  contract_events.py
app/events/handlers/: contract_handlers.py
app/models/: __init__.py  base.py  chunk.py  clause.py  contract.py  llm_usage_log.py  risk_assessment.py
app/repositories/: chunk_repo.py  clause_repo.py  contract_repo.py  embedding_repo.py  llm_usage_log_repo.py  risk_repo.py
app/routers/: analysis.py  contracts.py  query.py
app/schemas/: clause.py  contract.py  query.py  risk.py
app/services/: chunking_service.py  clause_service.py  contract_service.py  embedding_service.py  extraction_service.py  query_service.py  risk_service.py
app/services/llm/: base.py  cost.py  factory.py  groq_provider.py  openai_provider.py
app/services/llm/prompts/: clause_extraction.py  rag_query.py  risk_assessment.py
app/utils/: risk_rules.py
app/workers/: celery_app.py  contract_tasks.py
docs/plans/: 2026-02-20-pactly-design.md  2026-02-21-phase2-clause-extraction.md  2026-02-23-phase3-embeddings.md  2026-03-03-phase-4-rag-pipeline.md  2026-03-03-phase-5-risk-scoring.md
